tests/errors/err07_return_fuera_funcion.ml
// Error 07: [SEMÁNTICO] return fuera de función
a = 5;
return a;
